# e-company-match

./: .gitignore  CLAUDE.md  README.md  manual_matches.json  pyproject.toml
config_data/: acronym_collision.txt  branch.txt  location.txt  replacements.json
scripts/: find_duplicates.py  match_cli.py  match_top2000_to_cup.py
specs/: company_name_matching_spec.md
ui/: index.html
