[project]
name = "company-name-matching"
version = "0.0.1"
description = "A Python monorepo managed with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0",
    "cm",
]

[tool.uv.sources]
cm = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = []
